# SWE-Edit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
evaluation/swebench-verified/: README.md  cleanup_containers.sh  main.py  prompt_long.j2  prompt_short.j2  run_agent.py  utils.py
src/sweedit/: __init__.py  main.py
src/sweedit/core/: agent.py  api_pool.py  context_manager.py  llm.py  types.py
src/sweedit/core/agenthub/: __init__.py  min_agent.py  swebench_agent.py
src/sweedit/core/prompts/: __init__.py  minimal.md
src/sweedit/tools/: __init__.py  base.py  execute_bash.py  finish.py  llm_editor.py  llm_file_editor.py  str_replace_editor.py  str_replace_editor_v2.py
src/sweedit/tools/descriptions/: execute_bash.md  finish.md  llm_editor.md  llm_file_editor.md  llm_file_editor_prompt.txt  llm_file_viewer_prompt.txt  str_replace_editor.md  str_replace_editor_v2.md
src/sweedit/utils/: __init__.py  api_config.py  retry.py  session.py
