[project]
name = "sweedit"
version = "1.0.0"
description = "SWE-Edit: Rethinking Code Editing for Efficient Software Engineering Agents"
readme = "README.md"
authors = [
    { name = "Arist12", email = "ykzhang@cs.wisc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.72.1",
    "click>=8.3.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "litellm>=1.79.1",
    "openai>=2.7.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
eval = [
    "swebench",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.uv.sources]
swebench = { git = "https://github.com/princeton-nlp/SWE-bench.git" }

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]
